# particle_shooting

./: .gitignore  Cargo.toml
crates/fixed_vector/: Cargo.toml
crates/fixed_vector/common/: Cargo.toml
crates/fixed_vector/common/src/: lib.rs
crates/fixed_vector/generator/: Cargo.toml
crates/fixed_vector/generator/src/: lib.rs
crates/fixed_vector/src/: fixed_vector.rs  lib.rs  sqrt.rs
crates/fixed_vector/tests/: Cargo.toml
crates/fixed_vector/tests/src/: main.rs
crates/frontend/: Cargo.toml  Trunk.toml
crates/frontend/public/: index.html
crates/frontend/public/assets/scss/: index.scss
crates/frontend/src/: app.rs  closures.rs  drawing.rs  glue.rs  main.rs  particle_system.rs  particles.rs
