[package]
name = "particle_shooting"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version ="0.20.0", features=["csr"] }
wasm-bindgen = "0.2.84"
rand = { version= "0.8.5", default-features = false, features = ["small_rng"] }
gloo-timers = "0.2.6"
fixed_vector = { path="../fixed_vector"}

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
